Initial implementation of gcp spanner adapter reverting jdbc changes for pr
renames and cleanup